[package]
name = "imgui-windows-d3d12-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "*"
offset = "0.1.*"


[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_System_Threading",
]

[dev-dependencies]
array-init = "2.0.0"
imgui-winit-support = "*"
winit = "*"
